--- a/styles.css
+++ b/styles.css
@@ -199,25 +199,12 @@ section:hover {
 }
 
 .dark-mode {
-  filter: invert(1);
 }
 
-.dark-mode-header {
-  background-color: #333;
-  color: #fff; 
-}
-
-.dark-mode-section {
-  background-color: #444; 
-  color: #fff; 
-}
-
-.dark-mode-box {
-  background-color: #555; 
-  color: #fff; 
-}
-
+header.dark-mode-header,
+section.dark-mode-section,
+.project-box.dark-mode-box,
 #contact.dark-mode-section {
-  background-color: #666; 
+  background-color: #333; 
   color: #fff; 
 }
