--- a/styles.css
+++ b/styles.css
@@ -198,43 +198,20 @@ section:hover {
   padding: 5px 10px;
 }
 
-.dark-mode {
-  filter: invert(1);
-}
-
-.dark-mode-header {
-  background-color: #333; 
-  color: #fff; 
-}
-
-.dark-mode-section {
-  background-color: #444;
-  color: #fff;
-}
-
-.dark-mode-box {
-  background-color: #555; 
-  color: #fff; 
-}
-
-#contact.dark-mode-section {
-  background-color: #666; 
-  color: #fff; 
-}
 
 button {
-  position: fixed;
-  top: 10px;
-  right: 10px;
-  padding: 10px;
-  cursor: pointer;
-  background-color: #393E46;
-  color: #ecf0f1;
-  border: none;
-  border-radius: 5px;
-  font-size: 14px;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    padding: 10px;
+    cursor: pointer;
+    background-color: #929AAB;
+    color: #ecf0f1;
+    border: none;
+    border-radius: 5px;
+    font-size: 14px;
 }
 
 button:hover {
-  background-color: #929AAB;
+    background-color: #393E46;
 }
